--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "pattern lab for stylus",
   "main": "gulpfile.js",
   "scripts": {},
-  "author": "",
-  "license": "MIT",
+  "author": "Suissa & Luiz Estacio",
+  "license": "WTFPL",
   "devDependencies": {
     "gulp": "^3.8.6",
     "gulp-stylus": "^1.1.0",
@@ -24,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/luizstacio/pattern-lab-stylus/issues"
   },
-  "homepage": "https://github.com/luizstacio/pattern-lab-stylus"
+  "homepage": "https://github.com/luizstacio/pattern-lab-stylus",
+  "dependencies": {
+    "gulp": "^3.8.7",
+    "gulp-clean": "^0.3.1",
+    "gulp-stylus": "^1.3.0",
+    "nib": "^1.0.3"
+  }
 }
